Event Start time and End time issues fixed.

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
@@ -91,7 +91,7 @@
 												{
 													<tr>
 														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
-														<td>@ev.Weekday</td>
+														<td>@ev.Weekday  @ev.Stime - @ev.Etime</td>
 														<td>$@ev.ChangeAmount</td>
 														<td>
 															<label class="switch">
