--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
@@ -89,7 +89,7 @@
 
 													<tr>
 														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
-														<td>@ev.Weekday @ev.StartTime - @ev.EndTime</td>
+														<td>@ev.Weekday @ev.Stime - @ev.Etime</td>
 														<td>$@ev.ChangeAmount</td>
 														<td>
 															<label class="switch">
