Delete Event Functionality Completed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -67,14 +67,14 @@
 
 						@foreach (var ev in Model.currentEventModel)
 						{
-						<tr>
-							<td>@ev.Name</td>
-							<td>@ev.Weekday</td>
-							<td>@ev.Frequency</td>
-							<td>$@ev.ChangeAmount</td>
-							<td id="@ev.Id" class="editEvent"><a href="#" data-toggle="modal" data-target="#EditEventModal" class="Edit"><span class="label label-orange">Edit</span></a></td>
-							<td id="@ev.Id" class="deleteEvent"><span class="label label-orange">Delete</span></td>
-						</tr>
+							<tr>
+								<td>@ev.Name</td>
+								<td>@ev.Weekday</td>
+								<td>@ev.Frequency</td>
+								<td>$@ev.ChangeAmount</td>
+								<td id="@ev.Id" class="editEvent"><a href="#" data-toggle="modal" data-target="#EditEventModal" class="Edit"><span class="label label-orange">Edit</span></a></td>
+								<td id="@ev.Id" class="deleteEvent"><span class="label label-orange">Delete</span></td>
+							</tr>
 						}
 					</tbody>
 				</table>
@@ -146,12 +146,26 @@
 
 		$(".deleteEvent").click(function () {
 			var id = $(this).attr("id");
-			alert(id);
 			$.ajax({
 				"url": "../Event/DeleteEvent/" + id,
 				"type": "GET",
-				success: function (data) {
-					alert(data);
+				success: function (msg) {
+					var content = msg;
+					$.confirm({
+						title: 'Alert!',
+						content: content,
+						buttons: {
+							confirm: {
+								text: 'Okay',
+								btnClass: 'btn-blue',
+								keys: ['enter', 'shift'],
+								action: function () {
+									 var url = '@Url.Action("Event", "Event")';
+									window.location.href = url;
+								}
+							}
+						}
+					});
 				},
 			});
 		});
