Added Transaction commit and rollback to Post/Edit Event. Added functionality to check whether event is registered or not to Edit Event Functionality

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
@@ -196,7 +196,10 @@
 				}, 2000);
 				return;
 			}
-			toastr.error(response.Message, "Add Event");
+			toastr.error(response.Message, "Add Event", { timeOut: 3000 });
+			setTimeout(function () {
+				window.location.reload();
+			}, 3000);
 		}
 		$("#btnsubmit").prop("disabled", false);
 		$("#btnCancel").prop("disabled", false);
