Validation messages for _AddEvent issue fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -84,7 +84,7 @@
 </div>
 <!-- Modal -->
 
-<div tabindex="-1" class="modal fade bd-example-modal-lg" id="eventModal" role="dialog" aria-hidden="true" aria-labelledby="eventModalTitle">
+<div class="modal fade bd-example-modal-lg" id="eventModal" tabindex="-1"  role="dialog" aria-labelledby="eventModalTitle" aria-hidden="true">
 
 	@Html.Partial("../Event/_AddEvent", Model.events)
 
