registration constraint (above 18 years) fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
@@ -119,7 +119,7 @@
 				dateFormat: 'mm-dd-yyyy',
 				setDate: null,
 				startDate: '-100y',
-				endDate: "today"
+				endDate: '-18y'
 			});
 		});
 
