--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Login.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Login.cshtml
@@ -5,25 +5,25 @@
 	Layout = "~/Views/Shared/_LayoutPageOpen.cshtml";
 }
 
-    <div class="login_heading">Login</div>
-	@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form", id = "Loginform" }))
-	{
-		@Html.AntiForgeryToken()
-		@Html.ValidationSummary(true, "", new { @class = "text-danger", style = "padding-left: 194px;" })
-		<label>Email</label>
-		@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocomplete = "off" })
+<div class="login_heading">Login</div>
+@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form", id = "Loginform" }))
+{
+	@Html.AntiForgeryToken()
+	@Html.ValidationSummary(true, "", new { @class = "text-danger", style = "padding-left: 194px;" })
+	<label>Email</label>
+	@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocomplete = "off" })
 
-		@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-		<label>Password @Html.ActionLink("Forgot Password?", "ForgotPassword", "Account", new { controller = "Account" }, new { @class = "forgot-link float-right forgot" })</label>
-		@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+	@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+	<label>Password @Html.ActionLink("Forgot Password?", "ForgotPassword", "Account", new { controller = "Account" }, new { @class = "forgot-link float-right forgot" })</label>
+	@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
 
-		@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-		<button class="btn btn-orange float-right" type="submit">Login<i class="material-icons">check_circle</i></button>
-    }
+	@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+	<button class="btn btn-orange float-right" type="submit">Login<i class="material-icons">check_circle</i></button>
+}
 
-    @if (ViewBag.UserNotActivated != null)
-    {
-        <script>
+@if (ViewBag.UserNotActivated != null)
+{
+	<script>
         var content = "@ViewBag.UserNotActivated";
         $.confirm({
             title: 'Alert!',
@@ -40,5 +40,27 @@
                 }
             }
         });
-        </script>
-    }
+	</script>
+}
+
+@if (ViewBag.Message != null)
+{
+	<script>
+        var content = "@ViewBag.Message";
+        $.confirm({
+            title: 'Alert!',
+            content: content,
+            buttons: {
+                confirm: {
+                    text: 'Okay',
+                    btnClass: 'btn-blue',
+                    keys: ['enter', 'shift'],
+                    action: function () {
+                        var url = '@Url.Action("Login", "Account")';
+                        window.location.href = url;
+                    }
+                }
+            }
+        });
+	</script>
+}
