--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
@@ -103,26 +103,28 @@
 						<div class="row">
 							<div class="col-md-6 offset-md-3">
 								@Html.LabelFor(m => m.AccountType, new { @class = "requiredA" })
-								@Html.DropDownList("AccountType", new SelectList(listItems, "Value", "Text"), new { @class = "form-control" })
+								@Html.DropDownList("AccountType", new SelectList(listItems, "Value", "Text"), new { @class = "form-control", @style = "height: 35px;" })
 								@Html.ValidationMessageFor(m => m.AccountType, "", new { @class = "text-danger" })
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 offset-md-3">
-								
+
 								@Html.LabelFor(m => m.SecurityQuestionsModel, new { @class = "requiredA" })
 								@for (var i = 0; i < sqmList.Count(); i++)
-								{
+	{
 							<div class="row">
-								<div id="dataListItem" class="col-md-8">
-									@sqmList[i].Id.
-									@sqmList[i].Name
-								</div>
-								<div id="dataTextBox" class="col-md-4">
-                                    <input type='text' class="form-control" name="AnswerTextbox_@(i+1)" id="AnswerTextbox_@(i+1)" value="@sqmList[i].Value" />
+								<div id="dataListItem" class="col-md-12">
+									<label>@sqmList[i].Id.
+									@sqmList[i].Name</label>
 								</div>
 							</div>
-								}
+							<div class="row">
+								<div id="dataTextBox" class="col-md-12">
+									<input type='text' class="form-control" name="AnswerTextbox_@(i+1)" id="AnswerTextbox_@(i+1)" value="@sqmList[i].Value" />
+								</div>
+							</div>
+}
 								@Html.ValidationMessageFor(m => m.SecurityQuestionsModel, "", new { @class = "text-danger" })
 							</div>
 							</div>
