--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
@@ -32,21 +32,21 @@
 							<div class="row bs-wizard">
 								<div class="col-md-4 bs-wizard-step active">
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="#">1</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">1</a>
 									<div class="text-center bs-wizard-stepnum marl-55">Personal</div>
 								</div>
 
 								<div class="col-md-4 bs-wizard-step disabled">
 
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="#">2</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">2</a>
 									<div class="text-center bs-wizard-stepnum">Contact</div>
 								</div>
 
 								<div class="col-md-4 bs-wizard-step disabled">
 
 									<div class="progress"><div class="progress-bar"></div></div>
-									<a class="bs-wizard-dot" href="#">3</a>
+									<a class="bs-wizard-dot" href="javascript: void(0);">3</a>
 									<div class="text-center bs-wizard-stepnum marr-60">Account</div>
 								</div>
 							</div>
