--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
@@ -9,9 +9,9 @@
 	<div class="nav-side-menu">
 		<div class="menu-list">
 			<ul class="menu-content collapse out classes-list" id="menu-content">
-				<li><a href="#"> About Balavihar Classes </a></li>
-				<li><a href="#"> Link 2 </a></li>
-				<li><a href="#"> Link 3 </a></li>
+				<li><a href="javascript: void(0);"> About Balavihar Classes </a></li>
+				<li><a href="javascript: void(0);"> Link 2 </a></li>
+				<li><a href="javascript: void(0);"> Link 3 </a></li>
 			</ul>
 		</div>
 	</div>
@@ -88,7 +88,7 @@
 												{
 
 													<tr>
-														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
+														<td><a href="javascript: void(0);" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
 														<td>@ev.Weekday @ev.Stime - @ev.Etime</td>
 														<td>$@ev.ChangeAmount</td>
 														<td>
