--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -11,17 +11,17 @@
 	<body class="theme_bg">
 		<header>
 			<div class="header_top">
-				<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
+				<a class="navbar-brand" href="javascript: void(0);"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
 				<div class="header-right">
 					<input name="search" class="search-field" type="text" placeholder="Search..">
 					<select class="drpdown">
 						<option>Our Other Sites</option>
 					</select>
-					<a class="fab fa-facebook-f" href="#"></a>
-					<a class="fab fa-twitter" href="#"></a>
-					<a class="fab fa-google-plus-g" href="#"></a>
-					<a class="fab fa-linkedin-in" href="#"></a>
-					<a class="fas fa-plus" href="#"></a>
+					<a class="fab fa-facebook-f" href="javascript: void(0);"></a>
+					<a class="fab fa-twitter" href="javascript: void(0);"></a>
+					<a class="fab fa-google-plus-g" href="javascript: void(0);"></a>
+					<a class="fab fa-linkedin-in" href="javascript: void(0);"></a>
+					<a class="fas fa-plus" href="javascript: void(0);"></a>
 				</div>
 			</div>
 			@if (Session["Menu"] == null)
