--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Admin/Index.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Admin/Index.cshtml
@@ -25,20 +25,20 @@
 
 		<ul class="menu-content collapse out" id="menu-content">
 			<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
-				<a href="#"> Account Settings <span class="arrow"></span></a>
+				<a href="javascript: void(0);"> Account Settings <span class="arrow"></span></a>
 			</li>
 
 			<ul class="sub-menu collapse" id="account">
-				<li><a class="Password" data-toggle="modal" data-target="#changePassword"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
+					<li><a class="Password" data-toggle="modal" data-target="#changePassword"><label><img alt="" src="~/Content/img/change-password.png">Change Password</label></a></li>
 			</ul>
 
 			<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
-				<a href="#"> Update Contact Info <span class="arrow"></span></a>
+				<a href="javascript: void(0);"> Update Contact Info <span class="arrow"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="contact">
-				<li><a class="Phone" id="@User.Identity.Name" data-toggle="modal" data-target="#changePhone"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
-				<li><a class="Email" id="@User.Identity.Name" data-toggle="modal" data-target="#changeEmail"><img alt="" src="~/Content/img/email.png"> Email</a></li>
-				<li><a class="Address" id="@User.Identity.Name" data-toggle="modal" data-target="#changeAddress"><img alt="" src="~/Content/img/address.png"> Address</a></li>
+				<li><a class="Phone" id="@User.Identity.Name" data-toggle="modal" data-target="#changePhone"><label><img alt="" src="~/Content/img/phone.png"> Phone</label></a></li>
+				<li><a class="Email" id="@User.Identity.Name" data-toggle="modal" data-target="#changeEmail"><label><img alt="" src="~/Content/img/email.png"> Email</label></a></li>
+				<li><a class="Address" id="@User.Identity.Name" data-toggle="modal" data-target="#changeAddress"><label><img alt="" src="~/Content/img/address.png"> Address</label></a></li>
 			</ul>
 		</ul>
 	</div>
@@ -244,6 +244,6 @@
 
 	});
 
-
+	
 </script>
 
