--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
@@ -24,7 +24,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<button class="btn btn-secondary float-left mr-3" id="btnCancelPhone" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-							<button class="btn btn-orange" id="btnsubmitPhone" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+							<button class="btn btn-orange" id="btnsubmitPhone" type="submit" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 						</div>
 					</div>
 				}
