--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
@@ -11,13 +11,13 @@
 
 			<ul class="menu-content collapse out classes-list" id="menu-content">
 				<li>
-					<a href="#"> About Balavihar Classes </a>
+					<a href="javascript: void(0);"> About Balavihar Classes </a>
 				</li>
 				<li>
-					<a href="#"> Link 2 </a>
+					<a href="javascript: void(0);"> Link 2 </a>
 				</li>
 				<li>
-					<a href="#"> Link 3 </a>
+					<a href="javascript: void(0);"> Link 3 </a>
 				</li>
 
 			</ul>
@@ -90,7 +90,7 @@
 												@foreach (var ev in item.Events)
 												{
 													<tr>
-														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
+														<td><a href="javascript: void(0);" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
 														<td>@ev.Weekday  @ev.Stime - @ev.Etime</td>
 														<td>$@ev.ChangeAmount</td>
 														<td>
@@ -118,12 +118,12 @@
 						<input class="form-check-input" id="termsandConditions" name="termsandConditions" type="checkbox">
 						<label class="form-check-label" for="termsandConditions">
 							I agree to the
-							<br><a href="#">terms and conditions</a>
+							<br><a href="javascript: void(0);">terms and conditions</a>
 						</label>
 					</div>
 					<div class="form-group form-check">
 						<input class="form-check-input" id="Directory" type="checkbox">
-						<label class="form-check-label" for="Directory"><a href="#" data-toggle="popover" data-content="Chinmaya Directory answers questions such as What is this? 
+						<label class="form-check-label" for="Directory"><a href="javascript: void(0);" data-toggle="popover" data-content="Chinmaya Directory answers questions such as What is this? 
 																		   Why do I need to join?">
 	Add me to the
 	Chinmaya Directory
