--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Payment/PaymentMethod.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Payment/PaymentMethod.cshtml
@@ -11,13 +11,13 @@
 
 			<ul class="menu-content collapse out classes-list" id="menu-content">
 				<li>
-					<a href="#"> About Balavihar Classes </a>
+					<a href="javascript: void(0);"> About Balavihar Classes </a>
 				</li>
 				<li>
-					<a href="#"> Link 2 </a>
+					<a href="javascript: void(0);"> Link 2 </a>
 				</li>
 				<li>
-					<a href="#"> Link 3 </a>
+					<a href="javascript: void(0);"> Link 3 </a>
 				</li>
 
 			</ul>
