--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageRegister.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageRegister.cshtml
@@ -15,7 +15,7 @@
     <header class="regi-header">
 
         <div class="container-fluid">
-            <a href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
+            <a href="javascript: void(0);"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
             <div style="width:68px; float:right; margin:0px; margin-top:-1px;"><img style="border-radius:50%; border:2px solid #c7b299;" src="~/Content/img/header-thumbnail.png"></div>
         </div>
     </header>
