--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_MainMenu.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_MainMenu.cshtml
@@ -8,15 +8,15 @@
 					{
 						if (@item == "Home")
 						{
-							<li class="nav-item active"> <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item active"> <a class="nav-link" href="javascript: void(0);">Home</a> </li>
 						}
 						if (@item == "About Us")
 						{
-							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">About Us</a> </li>
 						}
 						if (@item == "Donate")
 						{
-							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">Donate</a> </li>
 						}
 						if (@item == "Program/Event Registration")
 						{
@@ -32,7 +32,7 @@
 						}
 						if (@item == "Contact Us")
 						{
-							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">Contact Us</a> </li>
 						}
 					}
 				</ul>
@@ -53,7 +53,7 @@
 					</ul>
 					@if(@ViewBag.Role == 2)
 					{
-					<a id="cart" href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+					<a id="cart" href="javascript: void(0);"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
 					}
 				</div>
 			</div>
